--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
   "homepage": "https://github.com/yuhr/langue#readme",
   "dependencies": {
     "ajv": "^5.2.2",
-    "graphql": "^0.10.3",
-    "pouchdb": "^6.2.0"
+    "graphql": "^0.10.3"
   },
   "devDependencies": {
     "@types/graphql": "^0.9.3",
     "@types/node": "^8.0.10",
-    "@types/pouchdb": "^6.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
