--- a/package.json
+++ b/package.json
@@ -28,25 +28,27 @@
   "homepage": "https://github.com/yuhr/langue#readme",
   "dependencies": {
     "ajv": "^5.2.2",
-    "graphql": "^0.10.3"
+    "chain-gun": "^0.1.2",
+    "graphql": "^0.10.3",
+    "gun": "^0.8.9",
+    "gun-schema": "^0.1.0",
+    "nanoid": "^1.0.1"
   },
   "devDependencies": {
-    "cross-env": "^5.0.5",
-    "npm-run-all": "^4.1.1",
     "@types/graphql": "^0.9.3",
     "@types/node": "^8.0.10",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "before-build-webpack": "^0.1.0",
+    "cross-env": "^5.0.5",
     "doca": "^0.3.0",
     "gql-loader": "^1.0.0",
     "json-schema-loader": "^1.0.0",
+    "json-schema-to-typescript": "^4.6.5",
+    "npm-run-all": "^4.1.1",
     "ts-loader": "^2.2.2",
     "typescript": "^2.4.1",
-    "typescript-json-schema": "^0.16.0",
-    "typhen": "^1.2.8",
-    "typhen-json-schema": "^0.5.0",
     "webpack": "^3.0.0",
     "webpack-node-externals": "^1.6.0"
   },
